Finalisation de la page home

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -21,6 +21,8 @@
 
 <body>
   <app-root></app-root>
+  <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
