--- a/web/src/index.html
+++ b/web/src/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <app-root></app-root>
-  <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 
 </body>
 
